// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/UITitle > renders correctly - level 1 1`] = `
<div>
  <h1
    class="ui-title ui-title--large--1"
  >
    Test
  </h1>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - level 2 1`] = `
<div>
  <h2
    class="ui-title ui-title--2"
  >
    Test
  </h2>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - level 3 1`] = `
<div>
  <h3
    class="ui-title ui-title--3"
  >
    Test
  </h3>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - level 4 1`] = `
<div>
  <h4
    class="ui-title ui-title--4"
  >
    Test
  </h4>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - level 5 1`] = `
<div>
  <h5
    class="ui-title ui-title--5"
  >
    Test
  </h5>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - level 6 1`] = `
<div>
  <h6
    class="ui-title ui-title--6"
  >
    Test
  </h6>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - modifier different than level 1`] = `
<div>
  <h1
    class="ui-title ui-title--5--large"
  >
    Test
  </h1>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - with id 1`] = `
<div>
  <h1
    class="ui-title ui-title--1"
    id="test"
  >
    Test
  </h1>
  
  <!--&lt;Title&gt;-->
</div>
`;

exports[`svelte/UITitle > renders correctly - with itemprop 1`] = `
<div>
  <h1
    class="ui-title ui-title--1"
    itemprop="name"
  >
    <span
      class="ui-markdown ui-markdown--emphasis"
    >
      Test
    </span>
  </h1>
  
  <!--&lt;Title&gt;-->
</div>
`;
